# priconne-bot-rs

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cartoon-254.html  flake.nix  glossary.html  news.html  structure.drawio
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
bot/: Cargo.toml
bot/src/: config.rs  main.rs  telegram.rs
bot/tests/: config.yaml
doc/: README.md  post.md  priconne-service.md
doc/feature/: event-sync.md  post-sync.md  tagging.md
lost/: lost.rs  post.rs  post_source.rs  scratch.rs
lost/bot/: Cargo.toml
lost/bot/src/: bot.rs  cartoon.rs  config.rs  information.rs  main.rs  message.rs  news.rs
lost/bot/tests/: config.yaml
lost/database/: mod.rs
lost/db/: Cargo.toml
lost/db/src/: cartoon.rs  information.rs  lib.rs  news.rs  sent.rs
lost/resource/: post.rs  same.rs
lost/scheduler/src/: lib.rs  schedules.rs
lost/service/: mod.rs  post.rs
priconne/: Cargo.toml
priconne-core/: Cargo.toml
priconne-core/src/: client.rs  error.rs  lib.rs  page.rs  tagger.rs
priconne/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  main.rs  page.rs  service.rs  tagging.rs
priconne/src/chat/: mod.rs
priconne/src/client/: memorize.rs
priconne/src/database/: mod.rs  post.rs
priconne/src/insight/: event.rs  mod.rs  tagging.rs
priconne/src/message/: mod.rs
priconne/src/resource/: announcement.rs  api.rs  glossary.rs  mod.rs  post.rs  same.rs  update.rs
priconne/src/resource/announcement/: mod.rs  service.rs
priconne/src/resource/announcement/event/: mod.rs
priconne/src/resource/announcement/information/: mod.rs
priconne/src/resource/announcement/information/page/: ajax.rs  icon.rs  mod.rs  page.rs
priconne/src/resource/announcement/news/: mod.rs  service.rs
priconne/src/resource/announcement/news/page/: list.rs  mod.rs  news.rs  page.rs
priconne/src/resource/article/: mod.rs
priconne/src/resource/article/information/page/: icon.rs  mod.rs  page.rs
priconne/src/resource/article/news/page/: list.rs  mod.rs  news.rs  page.rs
priconne/src/resource/cartoon/: mod.rs  service.rs
priconne/src/resource/cartoon/page/: page.rs  pager.rs  thumbnail.rs
priconne/src/service/: announcement.rs  api.rs  config.rs  mod.rs  news.rs  post.rs  resource.rs  update.rs
priconne/src/service/resource/: announcement.rs  mod.rs
priconne/src/utils/: html.rs  mod.rs
priconne/tests/: config.yaml  news_1460.html
resource/: Cargo.toml
resource/src/: article.rs  bot.rs  event.rs  glossary.rs  lib.rs  message.rs
resource/src/article/: cartoon.rs  information.rs  news.rs
resource/src/article/cartoon/: bot.rs  database.rs
resource/src/article/cartoon/page/: page.rs  pager.rs  thumbnail.rs
resource/src/article/information/: bot.rs  database.rs
resource/src/article/information/page/: ajax.rs  icon.rs  mod.rs  page.rs
resource/src/article/news/: bot.rs  database.rs
resource/src/article/news/page/: list.rs  mod.rs  news.rs  page.rs
resource/tests/: information_page.html  news_1376.html  news_page.html
scheduler/: Cargo.toml
scheduler/src/: lib.rs  scheduled.rs  schedules.rs
server/: Cargo.toml
server/src/: main.rs
src/: api.rs  bot.rs  client.rs  config.rs  database.rs  error.rs  glossary.rs  lib.rs  main.rs  message.rs  page.rs  schedule.rs  telegram.rs  utils.rs
src/article/: cartoon.rs  information.rs  news.rs
src/article/cartoon/: bot.rs
src/article/cartoon/page/: mod.rs  page.rs  thumbnail.rs
src/article/information/: bot.rs
src/article/information/page/: ajax.rs  page.rs
src/article/news/: bot.rs
src/article/news/page/: list.rs  mod.rs  news.rs  page.rs
src/message/: tagger.rs
utils/: Cargo.toml
utils/src/: html.rs  lib.rs
