[package]
authors = ["KiruyaMomochi <KiruyaMomochi@users.noreply.github.com>"]
edition = "2018"
name = "priconne-telegram-bot"
version = "0.2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "^0.4.19", features = ["serde"] }
cron = "0.9.0"
either = "1.6"
env_logger = "0.9.0"
futures = "^0.3.15"
http = "0.2.4"
kuchiki = "^0.8.1"
markup5ever = "^0.10.1"
# hyper = { version = "0.14", features = ["full"] }
linked_hash_set = "0.1.4"
log = "0.4.14"
mongodb = { version = "2.0.0-beta.3", features = ["bson-chrono-0_4"] }
regex = "1"
reqwest = "^0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.64"
toml = "0.5.8"
telegraph-rs = { git = "https://github.com/KiruyaMomochi/telegraph-rs" }
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1.0"
tokio = { version = "^1.8.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-cron-scheduler = "*"
tokio-stream = "0.1.7"
warp = "0.3.1"
url = "^2.2.2"
