[package]
name = "bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
scheduler = { path = "../scheduler" }
priconne-core = { path = "../priconne-core" }
resource = { path = "../resource" }
chrono = { version = "^0.4.19", default-features = false, features = [
    "clock",
    "serde",
] }
cron = "0.9.0"
env_logger = "0.9.0"
futures = "^0.3.15"
http = "0.2.4"
log = "0.4.14"
mongodb = { version = "2.1.0-beta", features = ["bson-chrono-0_4"] }
regex = "1"
reqwest = "^0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.64"
serde_yaml = "0.8"
telegraph-rs = { git = "https://github.com/KiruyaMomochi/telegraph-rs" }
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
tokio = { version = "^1.8.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.7"
url = "^2.2.2"
warp = "0.3.1"
