[package]
name = "priconne"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
html5ever.workspace = true
http.workspace = true
kuchiki.workspace = true
linked_hash_set.workspace = true
log.workspace = true
mongodb.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
serde.workspace = true
telegraph-rs.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio-cron-scheduler.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[build-dependencies]
built.workspace = true
