[package]
name = "resource"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priconne-core = { path = "../priconne-core" }
utils = { path = "../utils" }
async-trait = "0.1"
chrono = { version = "^0.4.19", default-features = false, features = [
    "clock",
    "serde",
] }
env_logger = "0.9.0"
futures = "^0.3.15"
http = "0.2.4"
kuchiki = "^0.8.1"
linked_hash_set = "0.1.4"
log = "0.4.14"
mongodb = { version = "2.0.0-beta.3", features = ["bson-chrono-0_4"] }
reqwest = "^0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.64"
toml = "0.5.8"
telegraph-rs = { git = "https://github.com/KiruyaMomochi/telegraph-rs" }
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
tokio = { version = "^1.8.1", features = ["rt-multi-thread", "macros", "sync"] }
warp = "0.3.1"
url = "^2.2.2"
