[package]
name = "scheduler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.19", default-features = false, features = [
    "clock",
    "serde",
] }
cron = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
