[package]
name = "scheduler"
authors = ["KiruyaMomochi <KiruyaMomochi@users.noreply.github.com>"]
edition = "2021"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
cron = "0.11"
serde = { version = "1.0", optional = true }

[features]

serde = [ "dep:serde", "chrono/serde" ]
