[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priconne-core = { path = "../priconne-core" }
chrono = { version = "^0.4.19", default-features = false, features = [
    "clock",
    "serde",
] }
env_logger = "0.9.0"
kuchiki = "^0.8.1"
markup5ever = "^0.10.1"
log = "0.4.14"
mongodb = { version = "2.1.0-beta", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
url = "^2.2.2"
telegraph-rs = { git = "https://github.com/KiruyaMomochi/telegraph-rs" }
