[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb.workspace = true
priconne-core = { path = "../priconne-core" }
resource = { path = "../resource" }
teloxide.workspace = true
chrono.workspace = true
